Fixes alignment of images and text on page

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -71,13 +71,14 @@ html, body {
   background-color: #F2F2F2;
   z-index: 4;
   overflow: hidden;
+  padding: 50px;
 }
 
 .section-header {
   font-size: 4em;
   color: #A1A1A1;
   text-align:center;
-  margin-top: 50px;
+  /*margin-top: 50px;*/
   margin-bottom: 25px;
 }
 
@@ -92,7 +93,6 @@ html, body {
 }
 
 #isul-kim-headshot-div {
-  margin-bottom: 100px;
   height: 300px;
   background: url(../imgs/ik2-head.png) no-repeat; 
   background-size: 100% 100%;
@@ -103,6 +103,7 @@ html, body {
 
 #portfolio-section {
   overflow: hidden;
+  padding: 50px;
 }
 
 .portfolio-piece-img {
@@ -166,13 +167,8 @@ html, body {
 #bottom-div {
   background-color: #171717;
   color: white;
+  padding: 50px;
 }
-
-#bottom-div-text {
-  margin-top: 50px;
-  margin-bottom: 50px;  
-}
-
 
 .get-in-touch-header {
   font-size: 3em;
@@ -181,6 +177,7 @@ html, body {
 .get-in-touch-subtext {
   font-size: 1.5em;
 }
+
 
 
 /*changing font color*/
@@ -276,6 +273,9 @@ span.text-content {
   #about-me-section {
     text-align: center;
   } 
+  #bottom-div {
+    text-align: center;
+  }  
 }
 
 /* Extra Small Devices, Phones */ 
@@ -310,6 +310,9 @@ span.text-content {
   .portfolio-piece-img {
     height: 240px;
   }
+  #bottom-div {
+    text-align: left;
+  }    
 }
 
 /* Medium Devices, Desktops */
@@ -329,7 +332,7 @@ span.text-content {
   }
   #about-me-section {
     text-align: left;
-  }
+  }  
 }
 
 /* Large Devices, Wide Screens */
